--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,6 +6,10 @@
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
-    
-  %body.container
-    = yield
+
+%body.container
+
+.container-fluid
+  .row
+    .col-md-12= render 'shared/nav'
+    .col-md-12= yield
